--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,8 +1,17 @@
-.card{
-    width: 18rem;
-    margin: 0.3rem;
-}
- .photo{
-    width:"304px";
-     height:"236px";
+
+ .card{
+    width: 90%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
  }
+ img{
+    object-fit: cover;
+ }
+ .card-img-top{
+    width:100%;
+    height: 250px;
+}
+.align{
+   text-align: -webkit-center;
+}
